WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71677
[Qt] Fix failing inspector tests after build system changes
https://bugs.webkit.org/show_bug.cgi?id=71677
Summary
[Qt] Fix failing inspector tests after build system changes
Simon Hausmann
Reported
2011-11-07 06:18:12 PST
[Qt] Fix failing inspector tests after build system changes
Attachments
[Qt] Fix failing inspector tests after build system changes
(5.24 KB, patch)
2011-11-07 06:20 PST
,
Simon Hausmann
vestbo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2011-11-07 06:20:50 PST
Created
attachment 113855
[details]
[Qt] Fix failing inspector tests after build system changes
Simon Hausmann
Comment 2
2011-11-07 06:34:30 PST
Committed
r99418
: <
http://trac.webkit.org/changeset/99418
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug