[Qt] Fix failing inspector tests after build system changes https://bugs.webkit.org/show_bug.cgi?id=71677

Reviewed by Tor Arne Vestbø.

Source/WebKit/qt:

Ensure symbols from the qt resource system are referenced
from outside the static webcore library. One way of doing that is
to initialize the resources right away, as explained in the documentation
of th Qt resource system.

* Api/qwebpage.cpp:
(initResources):
(QWebPagePrivate::QWebPagePrivate):

Source/WebKit2:

Ensure symbols from the qt resource system are referenced
from outside the static webcore library. One way of doing that is
to initialize the resources right away, as explained in the documentation
of th Qt resource system.

* WebProcess/WebPage/qt/WebPageQt.cpp:
(initResources):
(WebKit::WebPage::platformInitialize):

LayoutTests:

* platform/qt/Skipped: Unskip previously failing tests.

git-svn-id: svn://svn.chromium.org/blink/trunk@99418 bbb929c8-8fbe-4397-9dbb-9b2b20218538